# BAR

./: README.md
ascii-art/: README.md  ascii_art.py  ascii_art.txt  ascii_art.txt.mat  ascii_art_batch.py
blst-bazel/: BUILD  MODULE.bazel  README.md  bls12_381_params.py  main.cpp
ckzg4844-bazel/: BUILD  MODULE.bazel  README.md  main.cpp
ckzg4844-bazel/extensions/: c_kzg_4844.bzl
compiler-macros-g++/: README.md  demo.cpp
function-intercept-g++/: README.md  intercept.c  main_dl.cpp  main_intercept.cpp  mylib.cpp
gdb-g++/: README.md  demo_attach.cpp  demo_launch.cpp
grpc-g++/: Dockerfile  README.md  client.cpp  client_compress.cpp  gen_certs.sh  server.cpp  server_compress.cpp  sniffer.py  utils.h
json-g++/: README.md  example.json  main.cpp
leveldb-g++/: README.md  main.cpp
manim-python/: README.md  connect_with_line.py  draw_circle.py  draw_circle_animation.py  draw_fibonacci_spiral.py  draw_func.py  draw_with_points.py  move_along_path.py  rotate_about_x.py  vmobject_demo.py
monitor-python/: README.md  analysis.py  monitor.py
ollama-go/: README.md
perf/: README.md  demo.cpp
producer-consumer-http-rust/: Cargo.toml  README.md  server.py
producer-consumer-http-rust/src/: logger.rs  main.rs
producer-consumer-rust/: Cargo.toml  README.md
proto-grpc/: README.md  client.py  graph.txt
proto-grpc-python/: README.md  client.py  requirements.txt  server.py  service.proto
proto-python/: README.md  demo.py  parser.py
rl-snake-python/: README.md  main.py  qnetworkagent.py  (+3 more)
tfhe-rust/: Cargo.toml  README.md
tfhe-rust/src/: main.rs
(+21 files in other folders)
