[package]
name = "rust_http_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
#rand = "0.9.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
fern = { version = "0.6", features = ["colored"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
