[package]
name = "tfhe-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "seeder_unix"] }
chrono = "0.4"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1